// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Stories renders correct header when user is logged in 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-1hc7nu0-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1im6ja8-MuiToolbar-root"
    >
      <div
        class="MuiBox-root css-1rr4qq7"
      />
      <a
        class="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-1uszxa5-MuiTypography-root-MuiLink-root"
        href="/"
      >
        webaudiomachines
      </a>
      <div
        class="MuiBox-root css-1j9bsaa"
      >
        <a
          class="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-kejutp-MuiTypography-root-MuiLink-root"
          href="/sign-in/"
        >
          Sign Out
        </a>
      </div>
    </div>
  </header>
</div>
`;

exports[`Header Stories renders correct header when user is not logged in 1`] = `
<div>
  <header
    class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed mui-fixed css-1hc7nu0-MuiPaper-root-MuiAppBar-root"
  >
    <div
      class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1im6ja8-MuiToolbar-root"
    >
      <div
        class="MuiBox-root css-1rr4qq7"
      />
      <a
        class="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-1uszxa5-MuiTypography-root-MuiLink-root"
        href="/"
      >
        webaudiomachines
      </a>
      <div
        class="MuiBox-root css-1j9bsaa"
      >
        <a
          class="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-kejutp-MuiTypography-root-MuiLink-root"
          href="/sign-in/"
        >
          Sign In
        </a>
        <a
          class="MuiTypography-root MuiTypography-h6 MuiLink-root MuiLink-underlineAlways css-kejutp-MuiTypography-root-MuiLink-root"
          href="/sign-up/"
        >
          Sign Up
        </a>
      </div>
    </div>
  </header>
</div>
`;
